all mighty push

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,121 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Abhishek Chothani
+    - name: Contact No
+      value: "+1 434-569-9343"
+    - name: Email
+      value: "<a href='mailto:abhismirai10@gmail.com'>abhismirai10@gmail.com</a>"
+    - name: Portfolio
+      value: "<a href='https://abhismirai10.github.io/' target='_blank'>Website</a>"
+    - name: LinkedIn
+      value: "<a href='https://www.linkedin.com/in/abhishek-chothani10/' target='_blank'>Profile</a>"
+    - name: GitHub
+      value: "<a href='https://github.com/abhismirai10' target='_blank'>Repositories</a>"
+    - name: YouTube
+      value: "<a href='https://www.youtube.com/@abhismirai10' target='_blank'>Channel</a>"
     - name: Languages
-      value: English, German
+      value: "English, Gujarati, Hindi"
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Master of Science in Mechanical Engineering
+      institution: Florida Institute of Technology, Florida, USA
+      year: 2023 - 2024
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Specialization in Robotics and Automation
+        - Research on reinforcement learning and imitation learning for robotic manipulation
+    - title: Bachelor of Engineering in Mechanical Engineering
+      institution: Gujarat Technological University, India
+      year: 2017 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Focused on robotics, automation, design and manufacturing.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Assistant
+      institution: NEural TransmissionS (NETS) Lab, Florida
+      year: Jan'24 - Dec'24
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Developed end-to-end robotic learning models using Python, PyTorch, and Isaac Sim
+        - Investigated Action Chunking with Transformers (ACT), Diffusion Policies, and PPO
+        - Built robotic pick-and-place pipelines integrating classical and AI-driven techniques
+
+    - title: Robotics Project Developer Intern
+      institution: Kennedy Space Center Visitor Complex, Florida, USA
+      year: June'24 – Jan'24
       description:
-        - Description 1.
-        - Description 2.
+        - Designed and built a functional NASA Perseverance Rover model
+        - Developed motion control using ROS, PID algorithms, and embedded systems
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Mechanical Engineer Intern
+      institution: Jaycon Systems, Florida, USA
+      year: Sep'24 – Dec'24
       description:
+        - Developed AR-based deep learning solutions with YOLO and TensorFlow
+        - Contributed to robotic arm automation projects using UR10 and ROS2
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Robotics Engineer
+      institution: BandG Robotics, India
+      year: Jan'21 – Dec'22
+      description:
+        - Designed robotic manipulators using ROS, Python, and ANSYS
+        - Developed CNC automation solutions for high-precision manufacturing
 
-- title: Open Source Projects
+- title: Certifications
+  type: list
+  contents:
+    - Deep Learning Specialization | Coursera
+    - Autodesk CAD/CAM/CAE Specialization | Coursera
+    - HASS CNC Milling and CNC Lathe Operator | HASS Automation
+
+- title: Skills
+  type: list
+  contents:
+    - "Programming: Python, C/C++, MATLAB, PyTorch, ROS, ROS2, OpenCV, PX4 autopilot"
+    - "Robotics: Robotic Manipulation, Navigation, Computer Vision, Imitation Learning, Reinforcement Learning"
+    - "Devices: Raspberry Pi, Jetson, Arduino, STM32, ARM Cortex-M4"
+    - "Simulation: Isaac Sim, Drake, Gazebo"
+    - "CAD/CAM: Fusion 360, SolidWorks, Ansys, Mastercam"
+    - "OS: Linux Ubuntu"
+
+- title: Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: "<a href='https://github.com/abhismirai10/IsaacLab_Abhi' target='_blank'>Bipedal Training of Spot using IsaacLab & PPO</a>"
+      year: 2025
+      description: Training Boston Dynamics' Spot to balance on two legs using reinforcement learning.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: "<a href='https://github.com/abhismirai10/ros_noetic_tutorials' target='_blank'>ROS Noetic Tutorials</a>"
+      year: 2024
+      description: Step-by-step hands-on tutorials for learning ROS Noetic
+
+    - title: "<a href='https://github.com/abhismirai10/Pan-and-Tilt-Mechanism' target='_blank'>Pan and Tilt Object Tracking</a>"
+      year: 2024
+      description: A robotic tracking system using Dynamixel servos and YOLO
+
+    - title: "<a href='https://github.com/abhismirai10/Gesture_Control_Drone' target='_blank'>Gesture-Controlled Drone</a>"
+      year: 2023
+      description: Designed a drone controlled via hand gestures using MediaPipe and PX4 autopilot
+
+    - title: "<a href='https://github.com/abhismirai10/ARM_Cortex_M4_MicroController' target='_blank'>ARM Cortex-M4 Development</a>"
+      year: 2023
+      description: Embedded systems programming on ARM Cortex-M4 with FreeRTOS
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Robotics & AI
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Reinforcement learning and imitation learning for robotic control
+        - Optimization of robot dynamics and trajectory planning
+    - title: Control and Embedded Systems
       items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Real-time operating systems (RTOS) for robotics control
+        - Hardware-software co-design for robotic and industrial automation
+    - title: Design & Manufacturing
+      items:
+        - Mechanical design and CAD modeling for robotic systems and automation
+        - CNC programming, machining processes, and additive manufacturing techniques
